<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/btnchange"
        android:text="@string/green"
        android:textColor="@color/black"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnred"
        android:textColor="@color/black"
        android:text="@string/Red"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnchange"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnblue"
        android:text="@string/blue"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnchange"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etvalue"
        android:hint="@string/enter_value"
        app:layout_constraintTop_toBottomOf="@id/btnchange"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnpass"
        android:text="@string/pass"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/etvalue"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btncounter"
        android:text="@string/counter"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/etvalue"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/firstFragment"
        app:layout_constraintTop_toBottomOf="@id/btnpass"
        app:layout_constraintBottom_toBottomOf="parent"
        android:name="com.sonia.fragmentlifecycle.FirstFragment"/>

</androidx.constraintlayout.widget.ConstraintLayout>